# gstreamer-camera-preview

./: .gitignore  CMakeLists.txt  README.md  main.cpp
